exercises/03_derive/11_darling/tests/fail/unknown_key.stderr
error: Unknown field: `renmae`. Did you mean `rename`?
 --> tests/fail/unknown_key.rs:8:13
  |
8 |     #[model(renmae = "email_address")]
  |             ^^^^^^
